refactor calendar component to display appointments with improved styling and date comparison logic

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -44,15 +44,16 @@
             <td>
               <div class="cell-overlay" tabindex="0"></div>
               <div class="date">{{ date.getDate() }}</div>
-              <div class="appointments">
-                <!-- @for (appointment of appointments; track $index) { -->
-                <ng-container>
-                  <div tabindex="0" class="appointment">
-                    <!-- <span>{{ appointment.title }}</span> -->
-                    <span> mohsen</span>
-                  </div>
-                </ng-container>
-                <!-- } -->
+              <div class="calendar__appointment">
+                @for (appointment of appointments; track $index) {
+                    @if (isEqualDate(appointment.date, date)) {
+                        <ng-container>
+                            <div tabindex="0" class="calendar__appointment--item" [style]="{backgroundColor: appointment.color}">
+                                <span>{{ appointment.title }}</span>
+                            </div>
+                        </ng-container>
+                    }
+                }
               </div>
             </td>
             }
