--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -65,4 +65,20 @@
       }
     }
   }
+  @include element(appointment) {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    font-size: 0.8em;
+    @include modifier(item) {
+      white-space: nowrap; 
+      overflow: hidden; 
+      text-overflow: ellipsis; 
+      display: block;
+      padding: 2px 5px;
+      border-radius: 5px;
+      font-weight: 400;
+    }
+  }
 }
