--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -64,13 +64,17 @@
           position: relative;
           border-right: 1px solid #ddd;
           border-radius: 10px;
-          margin: 4px;
           height: 100px;
           border: 1px solid #ddd;
-          padding: 3px;
+          padding: 5px;
           font-weight: 100;
         }
       }
+    }
+    @include modifier(disable){
+      background-color: #f6f6f6;
+      color: #adadad;
+      border: none!important;
     }
   }
   @include element(appointment) {
