--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -63,6 +63,7 @@
           vertical-align: top;
           position: relative;
           border-right: 1px solid #ddd;
+          cursor: pointer;
           border-radius: 10px;
           height: 100px;
           border: 1px solid #ddd;
