--- a/src/app/appointment/appointment.dialog.component.html
+++ b/src/app/appointment/appointment.dialog.component.html
@@ -1,17 +1,17 @@
 <h2 mat-dialog-title>Create New Appointment</h2>
-<mat-dialog-content>
+<mat-dialog-content class="form">
   <form [formGroup]="appointmentForm">
-    <mat-form-field appearance="outline" class="form-field">
+    <mat-form-field appearance="outline" class="form__field">
       <mat-label>Title</mat-label>
       <input matInput formControlName="title" />
       @if (appointmentForm.get('title')?.hasError('required')) {
       <mat-error> Title is required </mat-error>
-      } @if (appointmentForm.get('title')?.hasError('maxLength')) {
+      } @else if (appointmentForm.get('title')?.hasError('maxLength')) {
       <mat-error> Title cannot exceed 50 characters </mat-error>
       }
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="form-field">
+    <mat-form-field appearance="outline" class="form__field">
       <mat-label>Date</mat-label>
       <input matInput [matDatepicker]="picker" formControlName="date" />
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -21,7 +21,7 @@
       }
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="form-field">
+    <mat-form-field appearance="outline" class="form__field">
       <mat-label>Start Time</mat-label>
       <input matInput type="time" formControlName="startTime" />
       @if (appointmentForm.get('startTime')?.hasError('required')) {
@@ -29,7 +29,7 @@
       }
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="form-field">
+    <mat-form-field appearance="outline" class="form__field">
       <mat-label>End Time</mat-label>
       <input matInput type="time" formControlName="endTime" />
       @if (appointmentForm.get('endTime')?.hasError('required')) {
@@ -37,7 +37,7 @@
       }
     </mat-form-field>
 
-    <mat-form-field appearance="outline" class="form-field">
+    <mat-form-field appearance="outline" class="form__field">
       <mat-label>Color</mat-label>
       <input matInput type="color" formControlName="color" />
     </mat-form-field>
