--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -49,7 +49,7 @@
               <p>{{ date.getDate() }}</p>
               <div class="calendar__appointment">
                 @for (appointment of getAppointmentsForDate(date); track $index)
-                {
+                { @if ($index < 2) {
                 <ng-container>
                   <div
                     tabindex="0"
@@ -59,6 +59,17 @@
                     <span>{{ appointment.title }}</span>
                   </div>
                 </ng-container>
+                } }
+                @if(getAppointmentsForDate(date).length > 2){
+                  <ng-container>
+                    <div
+                      tabindex="0"
+                      class="calendar__appointment--item"
+                      (click)="openAppointmentModal(date); $event.stopPropagation()"
+                    >
+                      <span>+{{ getAppointmentsForDate(date).length - 2 }} more</span>
+                    </div>
+                  </ng-container>
                 }
               </div>
             </td>
