feat(calendar): update 'Add Appointment' button to trigger date selection

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -18,7 +18,7 @@
         <button mat-icon-button (click)="goToNext()">
           <mat-icon>chevron_right</mat-icon>
         </button>
-        <button mat-flat-button>Add Appointment</button>
+        <button mat-flat-button (click)="selectDate()">Add Appointment</button>
       </div>
     </div>
     <div class="calendar__body">
