--- a/src/app/appointment/appointment.dialog.component.html
+++ b/src/app/appointment/appointment.dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Create New Appointment</h2>
+<h2 mat-dialog-title>{{ !data.uuid ? "Create" : "Edit" }} New Appointment</h2>
 <mat-dialog-content class="form">
   <form [formGroup]="appointmentForm">
     <mat-form-field appearance="outline" class="form__field">
@@ -45,12 +45,18 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button (click)="closeDialog()">Cancel</button>
+  @if (data.uuid) {
+  <button mat-stroked-button class="form__delete">
+    <mat-icon >delete</mat-icon>
+    Delete
+  </button>
+  }
   <button
-    mat-raised-button
+    mat-flat-button
     color="primary"
     [disabled]="!appointmentForm.valid"
     (click)="submitFrom()"
   >
-    Save
+    {{ !data.uuid ? "Save" : "Edit" }}
   </button>
 </mat-dialog-actions>
