--- a/src/app/appointment/appointment.dialog.component.scss
+++ b/src/app/appointment/appointment.dialog.component.scss
@@ -5,4 +5,11 @@
     width: 100% !important;
     margin: 5px 0;
   }
+  @include element(delete){
+    border: 1px solid #FF0F0F;
+    color: #FF0F0F;
+    &:hover{
+      background-color: rgba(255, 0, 0, 0.105)!important;
+    }
+  }
 }
