--- a/src/app/appointment/appointment.dialog.component.html
+++ b/src/app/appointment/appointment.dialog.component.html
@@ -46,7 +46,7 @@
 <mat-dialog-actions align="end">
   <button mat-button (click)="closeDialog()">Cancel</button>
   @if (data.uuid) {
-  <button mat-stroked-button class="form__delete">
+  <button mat-stroked-button (click)="onDeleteClick()">
     <mat-icon >delete</mat-icon>
     Delete
   </button>
