--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -87,6 +87,7 @@
     flex-direction: column;
     gap: 5px;
     font-size: 0.8em;
+    position: relative;
     @include modifier(item) {
       white-space: nowrap;
       overflow: hidden;
