feat(about-me): add AboutMeComponent with basic template and tests feat(calendar): enhance calendar header with 'About me' button and update styles

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -33,6 +33,11 @@
     @include at-gte-l {
       flex-direction: row;
     }
+    @include element(info-box){
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
   }
   @include element(controls) {
     display: flex;
