--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,14 +1,20 @@
 <div class="calendar">
   <div class="calendar__container" cdkDropListGroup>
     <div class="calendar__header">
-      <div>
-        @if (currentView === 'month' || true) {
-        <h2 class="calendar-month">
-          {{
-            viewDate.toLocaleString("en-US", { month: "long", year: "numeric" })
-          }}
-        </h2>
-        }
+      <div class="calendar__header__info-box">
+        <button mat-raised-button><mat-icon >face</mat-icon> About me</button>
+        <div>
+          @if (currentView === 'month' || true) {
+          <h2 class="calendar-month">
+            {{
+              viewDate.toLocaleString("en-US", {
+                month: "long",
+                year: "numeric"
+              })
+            }}
+          </h2>
+          }
+        </div>
       </div>
       <div class="calendar__controls">
         <button mat-stroked-button (click)="goToToday()">Today</button>
@@ -76,7 +82,9 @@
                   <div
                     tabindex="0"
                     class="calendar__appointment--item"
-                    (click)="showModal(date.toString()); $event.stopPropagation()"
+                    (click)="
+                      showModal(date.toString()); $event.stopPropagation()
+                    "
                   >
                     <span
                       >+{{ getAppointmentsForDate(date).length - 2 }} more</span
