feat(about-me): enhance AboutMeComponent with detailed profile and styling

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,3 +1,58 @@
-<mat-dialog-content class="form">
-    mohsen
+<mat-dialog-content class="about-me">
+  <img
+    src="/images/profile.webp"
+    width="100px"
+    height="100px"
+    class="about-me__image"
+  />
+  <h2>Mohsen Piri</h2>
+  <div class="about-me__star">
+    @for (_ of stars; track $index) {
+    <mat-icon>star</mat-icon>
+    }
+  </div>
+  <p class="about-me__text">
+    My name is Mohsen Piri, and I bring over <strong>4 years</strong> of
+    hands-on experience in Frontend Development, specializing in building<strong>
+      user-centric, scalable, and high-performance
+    </strong>
+    web applications.
+    <br />
+    I hold a Bachelor’s degree in Computer Engineering from
+    <strong>Tehran University</strong> and a Master’s degree from
+    <strong>Sharif University</strong>, which laid a solid foundation in
+    programming, algorithms, and software design.
+    <br />
+    Throughout my career, I have honed my expertise in
+    <strong>JavaScript, TypeScript, Vue.js, Nuxt.js, and React.js</strong
+    >—delivering exceptional solutions that balance functionality and
+    aesthetics. Recently,
+    <strong
+      >I’ve begun working with
+      <span class="about-me__text--important"> Angular </span> in a challenging
+      project with
+      <span class="about-me__text--important"> Payever Company </span>,
+      showcasing my ability to quickly adapt to new technologies and
+      frameworks.</strong
+    >
+    <br />
+    I’ve had the privilege of working with top-tier companies, including
+    <strong
+      >Maktabkhooneh and Booqall (an international remote job in
+      Sweetland).</strong
+    >
+    These experiences have allowed me to collaborate with talented
+    professionals, tackle diverse challenges, and contribute to impactful
+    projects on a global scale. I thrive in environments that foster innovation
+    and excellence.
+    <br />
+    Working alongside highly skilled software engineers and contributing to
+    large-scale, complex projects is where I excel. My ultimate goal is to
+    continuously push my technical abilities and bring measurable value to every
+    team I join.
+    <strong class="about-me__text--important"
+      >I am eager to bring my expertise, passion, and commitment to your team
+      and contribute to the success of your projects.</strong
+    >
+  </p>
 </mat-dialog-content>
