refactor eslint issues

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,6 +4,7 @@
     width="100px"
     height="100px"
     class="about-me__image"
+    alt="Mohsen Piri"
   />
   <h2>Mohsen Piri</h2>
   <div class="about-me__star">
