--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -72,6 +72,7 @@
                     (click)="
                       editAppointment(appointment); $event.stopPropagation()
                     "
+                    (keydown.enter)="editAppointment(appointment);  $event.stopPropagation()"
                     [style]="{ backgroundColor: appointment.color }"
                   >
                     <span>{{ appointment.title }}</span>
@@ -85,6 +86,7 @@
                     (click)="
                       showModal(date.toString()); $event.stopPropagation()
                     "
+                    (keydown.enter)="showModal(date.toString()); $event.stopPropagation()"
                   >
                     <span
                       >+{{ getAppointmentsForDate(date).length - 2 }} more</span
@@ -108,6 +110,7 @@
                       (click)="
                         editAppointment(appointment); $event.stopPropagation()
                       "
+                      (keydown.enter)="editAppointment(appointment);  $event.stopPropagation()"
                       [style]="{ backgroundColor: appointment.color }"
                     >
                       <span>{{ appointment.title }}</span>
